--- a/services/src/main/webapp/resources/css/screen.css
+++ b/services/src/main/webapp/resources/css/screen.css
@@ -22,7 +22,26 @@ body {
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   font-size: 0.8em;
   color:#363636;
+  position: static;
+  top:100px;
 }
+
+.header {
+	position:fixed; 
+	top:0px; 
+	margin:auto; 
+	z-index:100000; 
+	width:100%;	
+	height:100px;
+    background-color: #0F0F0F;
+}
+
+.content {
+	width:100%;
+    background-color: #EEEEEE;
+    margin-top: 110px;
+}
+
 
 #container {
   margin: 0 auto;
