--- a/services/src/main/webapp/resources/css/screen.css
+++ b/services/src/main/webapp/resources/css/screen.css
@@ -33,7 +33,7 @@ body {
 	z-index:100000; 
 	width:100%;	
 	height:100px;
-    background-color: #0F0F0F;
+    background-color: #E0E0F0;
 }
 
 .content {
