--- a/services/src/main/webapp/resources/css/screen.css
+++ b/services/src/main/webapp/resources/css/screen.css
@@ -34,12 +34,18 @@ body {
 	width:100%;	
 	height:100px;
     background-color: #E0E0F0;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 5px;
+    
 }
 
 .content {
 	width:100%;
     background-color: #EEEEEE;
     margin-top: 110px;
+    padding-left: 25px;
+    padding-top: 25px;
 }
 
 
@@ -235,12 +241,23 @@ input {
 	padding-bottom: 5px; 
 	margin-right: 15px;	
 	 
-	background-color: #003399; 
+	background-color: #777777; 
 	color: white;
-	font-weight:bold;
-	fone-size=10px;
+	font-weight:normal;
+	font-size=10px;
+	
+	border-color: orange;
+	border-width: 4px;
+	border-style: ridge;
+	
 }
 
 .menuItem:hover {
-	background-color: yellow;
+	background-color: #999999; 
+	color: yellow;
+	border-style: groove;
+	font-weight: normal;
+	text-decoration: none;
+	
+		
 }
