split out controllers clean up css new user functionality

--- a/services/src/main/webapp/partials/users.html
+++ b/services/src/main/webapp/partials/users.html
@@ -19,12 +19,7 @@
 		
 		<tfoot style="display:block;">
 			<tr>
-				<td style="width:100px;">
-					New
-				</td>
-				<td style="width:110px;"></td>
-				<td style="width:300px;">
-					<input data-ng-model='newUserName' style="width: 80%;"/>
+				<td colspan="3">
 					<button data-ng-click='newUser()' style="float: right">New</button>
 				</td>
 			</tr>
