--- a/services/src/main/webapp/partials/user-detail.html
+++ b/services/src/main/webapp/partials/user-detail.html
@@ -1,5 +1,6 @@
-<div id="main" class="content">
-	User Detail
+
+<span style="font-weight: bold; border-bottom: 2px; border-bottom-style: solid;">User Detail</span>
+<div style="padding-top: 25px;">
 	<table class="simpletablestyle">
 		<tr>
 			<td>ID</td>
@@ -8,17 +9,17 @@
 
 		<tr>
 			<td>Name</td>
-			<td><input data-ng-model='user.name' size="50"/></td>
+			<td><input data-ng-model='user.name' size="50" /></td>
 		</tr>
 
 		<tr>
 			<td>email</td>
-			<td><input data-ng-model='user.email' size="50"/></td>
+			<td><input data-ng-model='user.email' size="50" /></td>
 		</tr>
 
 		<tr>
 			<td>phone</td>
-			<td><input data-ng-model='user.phoneNumber' size="30"/></td>
+			<td><input data-ng-model='user.phoneNumber' size="30" /></td>
 		</tr>
 		<tr>
 			<td colspan="2">
