--- a/services/src/main/webapp/resources/css/screen.css
+++ b/services/src/main/webapp/resources/css/screen.css
@@ -29,23 +29,32 @@ body {
 .header {
 	position:fixed; 
 	top:0px; 
-	margin:auto; 
+	 
 	z-index:100000; 
-	width:100%;	
+	width:98%;	
 	height:100px;
     background-color: #E0E0F0;
     padding-left: 25px;
-    padding-right: 25px;
+    
     padding-top: 5px;
+    border: 2px solid;
+    border-radius: 25px
+    
     
 }
 
 .content {
-	width:100%;
+	width:98%;
     background-color: #EEEEEE;
     margin-top: 110px;
     padding-left: 25px;
     padding-top: 25px;
+    
+    border: 2px solid;
+    border-radius: 25px;
+    
+    padding-bottom : 25px;    
+    
 }
 
 
@@ -249,6 +258,7 @@ input {
 	border-color: orange;
 	border-width: 4px;
 	border-style: ridge;
+    border-radius: 10px
 	
 }
 
