add error dialogs

--- a/services/src/main/webapp/partials/user-detail.html
+++ b/services/src/main/webapp/partials/user-detail.html
@@ -3,22 +3,23 @@
 <div style="padding-top: 25px;">
 	<table class="simpletablestyle">
 		<tr>
-			<td>ID</td>
-			<td>{{user.id}}</td>
+			<td  style="vertical-align: top; float: right;">ID</td>
+			<td><div x-ng-hide="user.id == null">{{user.id}}</div>
+			<div x-ng-show="user.id == null">New User</div></td>
 		</tr>
 
 		<tr>
-			<td>Name</td>
+			<td  style="vertical-align: top; float: right;">Name</td>
 			<td><input data-ng-model='user.name' size="50" /></td>
 		</tr>
 
 		<tr>
-			<td>email</td>
+			<td  style="vertical-align: top; float: right;">eMail</td>
 			<td><input data-ng-model='user.email' size="50" /></td>
 		</tr>
 
 		<tr>
-			<td>phone</td>
+			<td style="vertical-align: top; float: right;">phone</td>
 			<td><input data-ng-model='user.phoneNumber' size="30" /></td>
 		</tr>
 		<tr>
