move exception handling outside WS classes

--- a/services/src/main/webapp/partials/apps.html
+++ b/services/src/main/webapp/partials/apps.html
@@ -23,10 +23,9 @@
 		<tr>
 			<td style="width: 100px;">New</td>
 			<td style="width: 110px;"></td>
-			<td style="width: 300px;"><input data-ng-model='newAppName'
-				style="width: 80%;" />
-				<button data-ng-disabled='saveAppButtonDisabled()'
-					data-ng-click='saveNewApp()' style="float: right;">Save</button></td>
+			<td style="width: 300px;">				
+				<button data-ng-click='newApp()' style="float: right;">New</button>
+			</td>
 		</tr>
 	</tfoot>
 </table>
